# ruzzic

./: Cargo.toml
crates/ruzzic-client/: Cargo.toml
crates/ruzzic-common/: Cargo.toml
crates/ruzzic-common/src/: lib.rs  next_bytes.rs  read_bytes_to.rs  var_int.rs  version.rs
crates/ruzzic-packet/: Cargo.toml
crates/ruzzic-packet/src/: error.rs  initial.rs  kind.rs  lib.rs  long_header.rs  packet.rs  version_negotiation.rs
crates/ruzzic-packet/src/packet/: long_header.rs  short_header.rs
crates/ruzzic-packet/src/packet/long_header/: connection_id.rs  initial.rs  version_negotiation.rs
crates/ruzzic-packet/src/packet/long_header/initial/: packet_number.rs  payload.rs  remain_length.rs  token.rs
crates/ruzzic-packet/src/packet/long_header/version_negotiation/: supported_versions.rs
crates/ruzzic-server/: Cargo.toml
crates/ruzzic-stream/: Cargo.toml
crates/ruzzic-stream/src/: endpoint_state.rs  frame.rs  lib.rs  stream.rs
crates/ruzzic-stream/src/frame/: crypto.rs  padding.rs  (+7 more)
crates/ruzzic-tls/src/: extension.rs  handshake.rs  lib.rs
crates/ruzzic/src/: simple_app.rs  tokio_stream.rs
ruzzic/: Cargo.toml
ruzzic-client/: Cargo.toml
ruzzic-client/src/: main.rs
ruzzic-common/: Cargo.toml
ruzzic-common/src/: endpoint.rs  lib.rs
ruzzic-http3/: Cargo.toml
ruzzic-http3/src/: error.rs  lib.rs
ruzzic-server/: Cargo.toml
ruzzic-server/src/: main.rs
ruzzic-stream/: Cargo.toml
ruzzic-stream/src/: connection.rs  frame.rs  lib.rs  packet.rs  read_bytes_to.rs  stream.rs
ruzzic-stream/src/frame/: ack.rs  connection_close.rs  crypto.rs  data_blocked.rs  max_data.rs  max_stream_data.rs  max_streams.rs  new_connection_id.rs  new_token.rs  padding.rs  path_challenge.rs  ping.rs  reset_stream.rs  retire_connection_id.rs  stop_sending.rs  stream.rs  stream_data_blocked.rs  streams_blocked.rs
ruzzic-stream/src/packet/: long_header.rs  neqo_tests.rs  packet_meta.rs  rfc9000_tests.rs
ruzzic-stream/src/packet/long_header/: initial.rs  version_negotiation.rs
ruzzic-stream/src/tests/: mod.rs
ruzzic-tls/: Cargo.toml
ruzzic-tls/src/: extension.rs  handshake.rs  lib.rs
ruzzic-tls/src/extension/: application_layer_protocol_negotiation.rs  certificate_authorities.rs  client_certificate_type.rs  cookie.rs  early_data.rs  heartbeat.rs  psk_key_exchange_modes.rs  quic_transport_parameters.rs  renegotiation_info.rs  server_name.rs  signature_algorithms_cert.rs  status_request.rs  supported_groups.rs  use_srtp.rs
ruzzic-tls/src/handshake/: certificate.rs  certificate_request.rs  certificate_verify.rs  client_hello.rs  encrypted_extensions.rs  finished.rs  key_update.rs  new_session_ticket.rs  others.rs  server_hello.rs
ruzzic/src/: error.rs  lib.rs  server.rs  tokio_stream.rs  version.rs
ruzzic/src/simple_app/: error.rs
(+13 files in other folders)
