[package]
name = "ruzzic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
ruzzic = { path = "../ruzzic" }
ruzzic-http3 = { path = "../ruzzic-http3"}
anyhow = "1"