[package]
name = "ruzzic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ruzzic = { path = "../ruzzic" }
ruzzic-common = { path = "../ruzzic-common" }
ruzzic-http3 = { path = "../ruzzic-http3"}
ruzzic-stream = { path = "../ruzzic-stream"}
anyhow = "1"
tokio-util = { version = "0.7.3", features = ["net", "codec"] }
tokio-stream = "0.1.9"
bytes = "1.1.0"
