[package]
name = "ruzzic-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10"
futures = "0.3"
bitvec = "0.22"
byteorder = "1.4"
derive_more = "0"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.9"
generic-array = "0.14"
ruzzic-common = { path = "../ruzzic-common" }
ruzzic-tls = { path = "../ruzzic-tls" }
log = "0.4"

[dev-dependencies]
env_logger = "0.9"