[package]
name = "ruzzic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["net", "codec"]}
tokio-stream = { version = "0.1" }
bytes = { version = "1" }
async-trait = "0"
ruzzic-common = { path = "../ruzzic-common" }
ruzzic-stream = { path = "../ruzzic-stream" }