[package]
name = "ruzzic-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
ruzzic-common = { version = "0.1.0", path = "../ruzzic-common" }
thiserror = "1.0.31"
